--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,4 +6,10 @@
     <string name="description_post_menu" >Меню</string>
     <string name="description_post_like" >Лайки</string>
     <string name="description_post_share" >просмотры</string>
+    <string name="menu_remove">Удалить</string>
+    <string name="menu_edit">Изменить</string>
+    <string name="post_text">Текст поста</string>
+    <string name="error_empty_content">Контент не может быть пустым</string>
+    <string name="edit_message">Изменить Сообщение</string>
+
 </resources>
